:memo: Add index page of `blog`

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,12 +8,13 @@ import Layout from '../layouts/BlogPost.astro';
 	pubDate={new Date('August 08 2021')}
 >
 
+<h1>About me</h1>
 <ul>
 	<li><a href="/">Home</a></li>
+	<li><a href="/blog/">Blog</a></li>
 	<li><a href="/about/">About</a></li>
 </ul>
 
-<h1>About me</h1>
 <h2>これは Astro によるサイト構築の練習です</h2>
 
 </Layout>
