--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,6 +20,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li><a href="/about/">About</a></li>
 			</ul>
 			<h2>Blog with Markdown</h2>
+			<ul>
+				<li><a href="/posts/post-1">Post 1</a></li>
+			</ul>
 		</main>
 		<Footer />
 	</body>
