:memo: Modify `about` again

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,10 @@ const identity = {
   hobbies: ["Beer", "Camp", "Sauna"],
 };
 const skills = ["Ruby", "Meta Engineering"];
+
+const happy = false;
+const finished = true;
+const goal = 3;
 ---
 
 <!doctype html>
@@ -44,6 +48,13 @@ const skills = ["Ruby", "Meta Engineering"];
 			<ul>
 				{skills.map((skill) => <li>{skill}</li>)}
 			</ul>
+
+			{happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
+
+			{finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
+
+			{goal === 3 ? <p>My goal is to finish in 3 days. 3日で終えるのが目標です。</p> : <p>My goal is not 3 days. 3日が目標ではありません。</p>}
+
 		</main>
 		<Footer />
 	</body>
