--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Navigation from '../components/Navigation.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
@@ -14,11 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header />
 		<main>
 			<h1>Blog</h1>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/blog/">Blog</a></li>
-				<li><a href="/about/">About</a></li>
-			</ul>
+			<Navigation />
 			<h2>Blog with Markdown</h2>
 			<ul>
 				<li><a href="/posts/post-1">Post 1</a></li>
